--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>NuLeaf Air Purification</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet"
+        />
         <script defer="defer" src="js/remove_overlay.js"></script>
     </head>
     <body>
@@ -15,20 +27,40 @@
                 alt=""
             />
         </div>
-
-        <nav class="navbar">
-            <h1>N</h1>
-        </nav>
-
-        <header class="header">
-            <h1>NULEAF AIR</h1>
-            <p>Next generation whole home air purification.</p>
-            <p>Get notified when NuLeaf Air is available</p>
-            <form action="">
-                <label for="email">Email</label>
-                <input type="email" />
-                <button type="submit">Subscribe</button>
-            </form>
+            <header class="header">
+                <div class="navbar">
+                    <div class="navbar-container">
+                        <h1>N</h1>
+                    </div>
+                </div>
+                <div class="headline-container">
+                    <span class="headline-subtitle">Air Evolution</span>
+                    <h1>NULEAF AIR IS COMING</h1>
+                    <p class="headline-text">
+                        The next generation of whole home air purification
+                        technology. Subscribe to be notified of our launch and gain
+                        early access to NuLeaf Air's innovative products harnesing the power of nature.
+                    </p>
+                    <form class="subscribe-form" action="">
+                        <input type="email" placeholder="Email Address*" />
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+                <div class="countdown-container">
+                    <video src="videos/countdown_bg.mp4" muted loop autoplay></video>
+                    <div class="countdown-content">
+                        <h2>Launching In</h2>
+                            <div class="countdown-row">
+                                <span class="countdown-section">
+                                    <span>Days</span>
+                                    <span>Hours</span>
+                                    <span>Minutes</span>
+                                    <span>Seconds</span>
+                                </span>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </header>
     </body>
 </html>
